--- a/css-tool-belt.css
+++ b/css-tool-belt.css
@@ -1,6 +1,22 @@
+/*********************** 
+Display
+************************/
+
 .dn {
 	display: none;
 }
+
+.db {
+	display: block;
+}
+
+.dib {
+	display: inline-block;
+}
+
+/*********************** 
+Positioning
+************************/
 
 .fl {
 	float: left;
@@ -14,34 +30,72 @@
 	text-align: center;
 }
 
-.round {
-	@include rounded();
+.tal {
+	text-align: left;
 }
 
-.round-bottom {
-	@include rounded(0px, 0px, 5px, 5px);
+.tar {
+	text-align: right;
 }
 
-.round-top {
-	@include rounded(5px, 5px, 0px, 0px);
+.vam {
+	vertical-align: middle;
 }
 
-// 3D Style Bevelled Bordering
-.pipe-left {
-	background-image: url('/assets/headpipe.jpg');
-	background-position: left center;
-	background-repeat: no-repeat;
+.vat {
+	vertical-align: top;
 }
 
-.pipe-right {
-	background-image: url('/assets/headpipe.jpg');
-	background-position: right center;
-	background-repeat: no-repeat;
+.vab {
+	vertical-align: bottom;
+}
+
+.abs-top {
+	position: absolute;
+	top: 0;
+}
+
+.abs-bottom {
+	position: absolute;
+	bottom: 0;
+}
+
+.sticky-top {
+	position: fixed;
+	top: 0;
+}
+
+.sticky-bottom {
+	position: fixed;
+	bottom: 0;
 }
 
 /*********************** 
-Padding Tools
+Style
 ************************/
+
+.round {
+  -webkit-border-radius: 5px 5px 5px 5px;
+  -moz-border-radius: 5px 5px 5px 5px;
+  border-radius: 5px 5px 5px 5px;
+}
+
+.round-bottom {
+  -webkit-border-radius: 0 0 5px 5px;
+  -moz-border-radius: 0 0 5px 5px;
+  border-radius: 0 0  5px 5px;
+}
+
+.round-top {
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
+}
+
+/*********************** 
+Padding 
+************************/
+
 .pad-small {
 	padding: 10px;
 }
@@ -74,27 +128,368 @@ Padding Tools
 	padding-top: 10px;
 }
 
+.top-pad-20 {
+	padding-top: 20px;
+}
+
+.top-pad-30 {
+	padding-top: 30px;
+}
+
+.top-pad-40 {
+	padding-top: 40px;
+}
+
+.top-pad-50 {
+	padding-top: 50px;
+}
+
+.top-pad-60 {
+	padding-top: 60px;
+}
+
+.top-pad-70 {
+	padding-top: 70px;
+}
+
+.top-pad-80 {
+	padding-top: 80px;
+}
+
+.top-pad-90 {
+	padding-top: 90px;
+}
+
+.top-pad-100 {
+	padding-top: 100px;
+}
+
 .bottom-pad-10 {
 	padding-bottom: 10px;
 }
 
-// Margin Tools
-.no-marg {
-	margin: 0;
+.bottom-pad-20 {
+	padding-bottom: 20px;
+}
+
+.bottom-pad-30 {
+	padding-bottom: 30px;
+}
+
+.bottom-pad-40 {
+	padding-bottom: 40px;
+}
+
+.bottom-pad-50 {
+	padding-bottom: 50px;
+}
+
+.bottom-pad-60 {
+	padding-bottom: 60px;
+}
+
+.bottom-pad-70 {
+	padding-bottom: 70px;
+}
+
+.bottom-pad-80 {
+	padding-bottom: 80px;
+}
+
+.bottom-pad-90 {
+	padding-bottom: 90px;
+}
+
+.bottom-pad-100 {
+	padding-bottom: 100px;
+}
+
+.left-pad-10 {
+	padding-left: 10px;
+}
+
+.left-pad-20 {
+	padding-left: 20px;
+}
+
+.left-pad-30 {
+	padding-left: 30px;
+}
+
+.left-pad-40 {
+	padding-left: 40px;
+}
+
+.left-pad-50 {
+	padding-left: 50px;
+}
+
+.left-pad-60 {
+	padding-left: 60px;
+}
+
+.left-pad-70 {
+	padding-left: 70px;
+}
+
+.left-pad-80 {
+	padding-left: 80px;
+}
+
+.left-pad-90 {
+	padding-left: 90px;
+}
+
+.left-pad-100 {
+	padding-left: 100px;
+}
+
+.right-pad-10 {
+	padding-right: 10px;
+}
+
+.right-pad-20 {
+	padding-right: 20px;
+}
+
+.right-pad-30 {
+	padding-right: 30px;
+}
+
+.right-pad-40 {
+	padding-right: 40px;
+}
+
+.right-pad-50 {
+	padding-right: 50px;
+}
+
+.right-pad-60 {
+	padding-right: 60px;
+}
+
+.right-pad-70 {
+	padding-right: 70px;
+}
+
+.right-pad-80 {
+	padding-right: 80px;
+}
+
+.right-pad-90 {
+	padding-right: 90px;
+}
+
+.right-pad-100 {
+	padding-right: 100px;
+}
+
+/*********************** 
+Margin
+************************/
+
+.marg-small {
+	margin: 10px;
+}
+
+.marg-medium {
+	margin: 15px;
+}
+
+.marg-large{
+	margin: 20px;
+}
+
+.no-right-marg {
+	margin-right: 0;
 }
 
 .no-left-marg {
 	margin-left: 0;
 }
 
+.no-top-marg {
+	margin-top: 0;
+}
+
+.no-bottom-marg {
+	margin-bottom: 0;
+}
+
 .top-marg-10 {
 	margin-top: 10px;
 }
 
-// Dimension Tools
+.top-marg-20 {
+	margin-top: 20px;
+}
+
+.top-marg-30 {
+	margin-top: 30px;
+}
+
+.top-marg-40 {
+	margin-top: 40px;
+}
+
+.top-marg-50 {
+	margin-top: 50px;
+}
+
+.top-marg-60 {
+	margin-top: 60px;
+}
+
+.top-marg-70 {
+	margin-top: 70px;
+}
+
+.top-marg-80 {
+	margin-top: 80px;
+}
+
+.top-marg-90 {
+	margin-top: 90px;
+}
+
+.top-marg-100 {
+	margin-top: 100px;
+}
+
+.bottom-marg-10 {
+	margin-bottom: 10px;
+}
+
+.bottom-marg-20 {
+	margin-bottom: 20px;
+}
+
+.bottom-marg-30 {
+	margin-bottom: 30px;
+}
+
+.bottom-marg-40 {
+	margin-bottom: 40px;
+}
+
+.bottom-marg-50 {
+	margin-bottom: 50px;
+}
+
+.bottom-marg-60 {
+	margin-bottom: 60px;
+}
+
+.bottom-marg-70 {
+	margin-bottom: 70px;
+}
+
+.bottom-marg-80 {
+	margin-bottom: 80px;
+}
+
+.bottom-marg-90 {
+	margin-bottom: 90px;
+}
+
+.bottom-marg-100 {
+	margin-bottom: 100px;
+}
+
+.left-marg-10 {
+	margin-left: 10px;
+}
+
+.left-marg-20 {
+	margin-left: 20px;
+}
+
+.left-marg-30 {
+	margin-left: 30px;
+}
+
+.left-marg-40 {
+	margin-left: 40px;
+}
+
+.left-marg-50 {
+	margin-left: 50px;
+}
+
+.left-marg-60 {
+	margin-left: 60px;
+}
+
+.left-marg-70 {
+	margin-left: 70px;
+}
+
+.left-marg-80 {
+	margin-left: 80px;
+}
+
+.left-marg-90 {
+	margin-left: 90px;
+}
+
+.left-marg-100 {
+	margin-left: 100px;
+}
+
+.right-marg-10 {
+	margin-right: 10px;
+}
+
+.right-marg-20 {
+	margin-right: 20px;
+}
+
+.right-marg-30 {
+	margin-right: 30px;
+}
+
+.right-marg-40 {
+	margin-right: 40px;
+}
+
+.right-marg-50 {
+	margin-right: 50px;
+}
+
+.right-marg-60 {
+	margin-right: 60px;
+}
+
+.right-marg-70 {
+	margin-right: 70px;
+}
+
+.right-marg-80 {
+	margin-right: 80px;
+}
+
+.right-marg-90 {
+	margin-right: 90px;
+}
+
+.right-marg-100 {
+	margin-right: 100px;
+}
+
+/*********************** 
+Dimension
+************************/
+
+.half-height {
+	height: 50%;
+}
+
+.half-width {
+	width: 50%;
+}
+
 .full-height {
 	height: 100%;
-	min-height: $min-page-height;
 }
 
 .full-width {
