--- a/css/css-tool-belt.css
+++ b/css/css-tool-belt.css
@@ -373,3 +373,28 @@ Dimension
 
 .full-width {
   width: 100%; }
+
+/*********************** 
+Tables
+************************/
+table {
+  max-width: 100%;
+  background-color: transparent;
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.table {
+  width: 100%;
+  margin-bottom: 20px; }
+  .table th, .table td {
+    padding: 8px;
+    line-height: 20px;
+    text-align: left;
+    vertical-align: top;
+    border-top: 1px solid #dddddd; }
+  .table th {
+    font-weight: bold; }
+  .table thead th {
+    vertical-align: bottom; }
+  .table tbody + tbody {
+    border-top: 2px solid #dddddd; }
