--- a/css/css-tool-belt.css
+++ b/css/css-tool-belt.css
@@ -1,3 +1,9 @@
+/************************
+The CSS Tool Belt
+-------------------------
+By Cheyne Wallace
+https://github.com/cheynewallace/css-tool-belt
+************************/
 .fl {
   float: left; }
 
