--- a/css-tool-belt.scss
+++ b/css-tool-belt.scss
@@ -1,6 +1,13 @@
 @import "config.scss";
 @import "mixins.scss";
 
+/************************
+The CSS Tool Belt
+-------------------------
+By Cheyne Wallace
+https://github.com/cheynewallace/css-tool-belt
+************************/
+
 @if $include-display {
 //*********************** 
 // Display
